--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
 					<mainClass>com.gtransit.App</mainClass>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	<packaging>jar</packaging>
@@ -81,7 +91,7 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j</artifactId>
-			<version>2.3.0</version>
+			<version>3.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
